[gd_scene load_steps=6 format=3 uid="uid://covniifh0ij4j"]

[ext_resource type="Theme" uid="uid://c8cqncsqlplyu" path="res://main_theme.tres" id="1_qhgeg"]
[ext_resource type="Script" path="res://scenes/ui/card_menu_ui.gd" id="2_krans"]
[ext_resource type="StyleBox" uid="uid://b4b3e0d14kvmi" path="res://scenes/card_ui/card_base_stylebox.tres" id="3_dyg5d"]
[ext_resource type="Texture2D" uid="uid://c6rme2o6dyaoj" path="res://art/tile_0104.png" id="4_m3nvx"]
[ext_resource type="Texture2D" uid="uid://cpmy5std4fafh" path="res://art/rarity.png" id="5_k2hhm"]

[node name="CardMenuUI" type="CenterContainer"]
offset_right = 25.0
offset_bottom = 30.0
size_flags_horizontal = 3
script = ExtResource("2_krans")

[node name="Visuals" type="Control" parent="."]
custom_minimum_size = Vector2(25, 30)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_qhgeg")

[node name="Panel" type="Panel" parent="Visuals"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_dyg5d")

[node name="Cost" type="Label" parent="Visuals"]
layout_mode = 0
offset_right = 10.0
offset_bottom = 10.0
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="Visuals"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_m3nvx")
expand_mode = 1
stretch_mode = 5

[node name="Rarity" type="TextureRect" parent="Visuals"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 8.0
grow_horizontal = 0
mouse_filter = 2
texture = ExtResource("5_k2hhm")
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
